--- a/package.json
+++ b/package.json
@@ -10,7 +10,6 @@
     "@testing-library/react": "^13.4.0",
     "@testing-library/user-event": "^13.5.0",
     "@types/jest": "^27.5.2",
-    "@types/node": "^16.18.69",
     "@types/react": "^18.2.46",
     "@types/react-dom": "^18.2.18",
     "antd": "^5.12.6",
@@ -28,6 +27,8 @@
     "start": "react-scripts start",
     "build": "react-scripts build",
     "test": "jest",
+    "test:watch": "jest --watch",
+    "test:coverage": "jest --coverage",
     "lint:css": "stylelint '**/*.css'",
     "cy:open": "cypress open",
     "cy:run": "cypress run",
@@ -55,9 +56,15 @@
     ]
   },
   "devDependencies": {
+    "@babel/core": "^7.23.7",
+    "@babel/preset-env": "^7.23.7",
+    "@babel/preset-react": "^7.23.3",
+    "@types/node": "^20.10.6",
+    "babel-jest": "^29.7.0",
     "cypress": "^13.6.2",
     "jest": "^27.5.1",
     "stylelint": "^16.1.0",
-    "stylelint-config-standard": "^36.0.0"
+    "stylelint-config-standard": "^36.0.0",
+    "ts-node": "^10.9.2"
   }
 }
